src/test/deca/context/invalid/DeclaVariable/undeclaredVariable.deca
// Description:
//    Déclaration de variables
//
// Résultats:
//    Ligne 11: Variable non déclarée
//
// Historique:
//    Créé le 10/01/2024

{
   int a = 3.2;
   a = b;
}
